# portfoliopersonal

./: README.md  pyproject.toml
core/: settings.py  urls.py
pages/: urls.py  views.py
pages/templates/: main.html
templates/: base.html
templates/static/home/css/: base.css
