[tool.poetry]
name = "my-portfolio"
version = "0.1.0"
description = ""
authors = ["joaocesarz <mercadinhodoleo95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
